[project]
name = "python-concurrency-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.35",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
